<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sacis</string>
    <string name="sys_admin">Sistema Administrador</string>
    <string name="sys_user">Sistema Usuario</string>
    <string name="choose_system">Escolha o sistema</string>
    <string name="sys_admin_enter_data">Entre com os dados corretamente</string>
    <string name="sys_admin_name">Nome:</string>
    <string name="sys_admin_login">Login:</string>
    <string name="sys_admin_password">Senha:</string>
    <string name="sys_admin_expire">Validade:</string>
    <string name="sys_admin_key">Chave</string>
    <string name="sys_admin_send">Enviar</string>
    <string name="user_breadcrumb">Sacis > User</string>
    <string name="sys_admin_breadcrumb">Sacis > Admin</string>
</resources>
