<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1" android:orientation="vertical">
    <TextView android:text="@string/choose_system" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_gravity="center" android:layout_width="wrap_content"></TextView>
    <Button android:text="@string/sys_admin" android:id="@+id/button1" android:layout_height="wrap_content" android:clickable="true" android:layout_marginTop="48dp" android:layout_width="188dp" android:layout_gravity="center"></Button>
    <Button android:text="@string/sys_user" android:id="@+id/button2" android:layout_height="wrap_content" android:layout_marginTop="48dp" android:layout_width="185dp" android:layout_gravity="center"></Button>
</LinearLayout>
